--- a/style.css
+++ b/style.css
@@ -1,100 +1,127 @@
 *{
-    padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+    padding: 0;
 }
 body{
-    height: 100%;
-    background-color: #1f5a82;
+    background-color: #548687;
+    text-align: center;
+}
+.header{
+    max-width: 1300px;
+    margin: auto;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+#title{
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#title h1{
+    font-size: 1.5rem;
+}
+@media only screen and (max-width:400px){
+    .header{
+        padding-right: 1px;
+        padding-left: 2px;
+    }
+    #title{
+        padding: 20px 0;
+    }
+}
+.fixed{
+    text-decoration: none;
+    cursor: pointer;
+    color: #082309;
+    font-size: 1.25rem;
 }
 .container{
-    background-color: #ffffff;
-    width: 70vmin;
-    padding: 10vmin;
-    margin: 100px auto;
-    border-radius: 10px;
-    box-shadow: 15px 30px 35px rgba(0, 0, 0, 0.1);
-}
-@media only screen and (max-width: 460px){
-    .container{
-        width: 80vmin;
-    }
-}
-@media only screen and (max-width: 336px){
-    .container{
-        width: 90vmin;
-    }
-}
-.coin{
-    height: 150px;
-    width: 150px;
-    position: relative;
-    margin: 32px auto;
-    transform-style: preserve-3d;
-}
-.coin img{
-    width: 100%;
-}
-.heads, .tails{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-.tails{
-    transform: rotateX(180deg);
-}
-
-@keyframes spin-tails {
-    0%{
-        transform: rotateX(0deg);
-    }
-    100%{
-        transform: rotateX(1980deg);     /*  1980 + 180 = 2160 */
-    }
-}
-@keyframes spin-heads {
-    0%{
-        transform: rotateX(0deg);
-    }
-    100%{
-        transform: rotateX(2160deg);
-    }
-}
-
-.stats{
+    height: 70vh;
     display: flex;
-    color: #101020;
-    font-size: 1rem;
-    font-weight: 500;
-    padding: 1rem;
-    margin-top: 55px;
-    margin-bottom: 40px;
-    box-shadow: 0 0 20px rgba(0, 139, 253, 0.25);
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    
 }
-.buttons{
+.game{
+    height: 60vmin;
+    width: 60vmin;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vmin;
 }
-button{
-    padding: 1rem;
+.box{
+    height: 18vmin;
+    width: 18vmin;
+    border-radius: 1rem;
     border: none;
-    font-size: 1rem;
-    border-radius: 15px;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+    font-size: 8vmin;
     cursor: pointer;
 }
-#flip-button{
-    background-color: #053469;
-    color: white;
+.btn{
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #191913;
+    color: #fff;
+    border-radius: 1rem;
+    border: none;
+    cursor: pointer;
 }
-#flip-button:disabled{
-    background-color: #e1e0ee;
-    border-color: #e1e0ee;
-    color: #101020;
+
+#msg{
+    color: #ffffc7;
+    font-size: 5vmin;
 }
-#reset-button{
-    background-color: #674706;
-    color: white;
+.msg-container{
+    height: 100vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+}
+.hide{
+    display: none;
+}
+
+/* leaderboard */
+
+.small-container{
+    max-width: 1080px;
+    margin: 80px auto;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: #ffffc7;
+    border-radius: 1rem;
+    border: 1px solid #ffffc7;
+}
+.small-container #Leaderboard{
+    margin: 30px 0 30px 0;
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+tr{
+    margin: 4px 0;
+}
+
+th{
+    text-align: left;
+    padding: 5px;
+}
+td{
+    text-align: left;
+    padding: 10px 5px;
+}
+#reset-leaderboard{
+    margin: 10px 0;
+    padding: 0.5rem;
+    font-size: 1rem;
+}
+#fixed{
+    display: none;
 }
